# WirtualnyEkosystem

./: CMakeLists.txt  LabyPytania.txt  main.cpp  model.cpp  model.h  sterowanie.cpp  sterowanie.h  wyswietlanie.cpp  wyswietlanie.h
WirtualnyEkosystem/: CMakeLists.txt  generatorlosowy.cpp  generatorlosowy.h  main.cpp  mieszkaniec.h  nisza.cpp  nisza.h  organizm.cpp  organizm.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  srodowisko.cpp  srodowisko.h  ustawienia.h  zlab03.cpp  zlab03.h  zlab09.cpp  zlab09.h  zlab10.cpp  zlab10.h  zlab12.cpp  zlab12.h
