cmake_minimum_required(VERSION 3.29.6)
project(WirtualnyEkosystem)

set(CMAKE_CXX_STANDARD 20)

add_executable(WirtualnyEkosystem main.cpp
        organizm.cpp
        organizm.h
        main.cpp
        ustawienia.h
        ustawienia.h
        organizm.cpp
        organizm.h
        generatorlosowy.cpp
        generatorlosowy.h
        sasiedztwo.cpp
        sasiedztwo.h
        mieszkaniec.cpp
        mieszkaniec.h
        osobniki.cpp
        osobniki.h
        nisza.cpp
        nisza.h
        zlab10.cpp
        zlab10.h
        zlab03.h
        zlab03.cpp
                )
